RESOLVED FIXED282261
Crash in `DownloadProxyMap::downloadFinished` during network process teardown
https://bugs.webkit.org/show_bug.cgi?id=282261
Summary Crash in `DownloadProxyMap::downloadFinished` during network process teardown
Charlie Wolfe
Reported 2024-10-29 11:49:50 PDT
If `NetworkProcessProxy` begins destruction while the `CancelDownload` message is in flight all downloads will have already been cleared. Calling `DownloadProxyMap::downloadFinished` with the `DownloadProxy` being kept alive in the lambda capture will dereference a null `NetworkProcessProxy`.
Attachments
Charlie Wolfe
Comment 1 2024-10-29 11:49:52 PDT
Charlie Wolfe
Comment 2 2024-10-29 11:50:29 PDT
EWS
Comment 3 2024-10-29 16:11:30 PDT
Committed 285866@main (a111b21f3e10): <https://commits.webkit.org/285866@main> Reviewed commits have been landed. Closing PR #35880 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.