Cherry-pick 285866@main (a111b21f3e10). https://bugs.webkit.org/show_bug.cgi?id=282261

Crash in `DownloadProxyMap::downloadFinished` during network process teardown
    https://bugs.webkit.org/show_bug.cgi?id=282261
    rdar://130399446

    Reviewed by Chris Dumez.

    If `NetworkProcessProxy` begins destruction while the `CancelDownload` message is in flight all downloads
    will have already been cleared. Calling `DownloadProxyMap::downloadFinished` with the `DownloadProxy`
    being kept alive in the lambda capture will dereference a null `NetworkProcessProxy`.

    * Source/WebKit/UIProcess/Downloads/DownloadProxy.cpp:
    (WebKit::DownloadProxy::cancel):

    Canonical link: https://commits.webkit.org/285866@main

Canonical link: https://commits.webkit.org/282416.266@webkitglib/2.46