Source/WebKit/UIProcess/Downloads/DownloadProxy.cpp
@@ -81,10 +81,13 @@ static RefPtr<API::Data> createData(std::span<const uint8_t> data)
 void DownloadProxy::cancel(CompletionHandler<void(API::Data*)>&& completionHandler)
 {
     if (m_dataStore) {
-        m_dataStore->networkProcess().sendWithAsyncReply(Messages::NetworkProcess::CancelDownload(m_downloadID), [this, protectedThis = Ref { *this }, completionHandler = WTFMove(completionHandler)] (std::span<const uint8_t> resumeData) mutable {
-            m_legacyResumeData = createData(resumeData);
-            completionHandler(m_legacyResumeData.get());
-            m_downloadProxyMap.downloadFinished(*this);
+        m_dataStore->networkProcess().sendWithAsyncReply(Messages::NetworkProcess::CancelDownload(m_downloadID), [weakThis = WeakPtr { *this }, completionHandler = WTFMove(completionHandler)] (std::span<const uint8_t> resumeData) mutable {
+            RefPtr protectedThis = weakThis.get();
+            if (!protectedThis)
+                return completionHandler(nullptr);
+            protectedThis->m_legacyResumeData = createData(resumeData);
+            completionHandler(protectedThis->m_legacyResumeData.get());
+            protectedThis->m_downloadProxyMap.downloadFinished(*protectedThis);
         });
     } else
         completionHandler(nullptr);
